# tg-config

./: PKGBUILD  README.md  README.ru.md  config.example.toml  pyproject.toml  tg-config.install
.github/workflows/: update-aur.yml
tg_config/: __init__.py  __main__.py  crypto.py  editor.py  experimental.py  formatter.py  io.py  scanner.py  schema.py  schema_loader.py  tdf.py  theme.py
usr/share/libalpm/hooks/: tg-config-telegram.hook
usr/share/libalpm/scripts/: tg-config-setup-wrapper
